feat: switch E2E tests to host networking and enable in CI